--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DairyCattle</string>
+    <string name="add">add</string>
 
     <array name="genres">
         <item>Rock</item>
